# controller/Cargo.toml

[package]
name = "controller"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
raw_struct = { workspace = true }
obfstr = { workspace = true }
nalgebra = { workspace = true }
mint = { workspace = true }

serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
serde_with = "3.8.3"
directories = "5.0"

cs2 = { path = "../cs2" }
cs2-schema-provider-impl = { path = "../cs2-schema/provider-impl" }
cs2-schema-generated = { path = "../cs2-schema/generated" }
cs2-schema-cutl = { path = "../cs2-schema/cutl" }
overlay = { path = "../overlay" }
utils-state = { path = "../utils/state" }

imgui = { version = "0.12", features = ["tables-api", "docking"] }
clap = { version = "4.3.19", features = ["derive"] }
windows = { version = "0.48.0", features = [
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_Media",
] }
rand = "0.8.5"
libloading = "0.8.6"
url = "2.5.0"
tokio = { version = "1.36.0", features = ["full"] }
rfd = "0.14.1"
font-awesome = "0.2.0"

winreg = "0.52"
raw-window-handle = "0.6.2"
image = "0.24"
gltf = "1.0"
glam = "0.24" 
kalman_rs = "0.1.3"
byteorder = "1.4"

# SVG Rendering Support
resvg = "0.43.0"
usvg = "0.43.0"
tiny-skia = "0.11.4"
rayon = "1.11.0"

[build-dependencies]
winres = "0.1"
chrono = "0.4.26"

# --- SECURITY HARDENING ---
[profile.release]
opt-level = 3       # Max optimization (mangles code structure)
lto = "fat"         # Link Time Optimization (inlines across crates)
codegen-units = 1   # Slow compile, but best machine code generation
panic = "abort"     # Removes panic strings and unwinding symbols
strip = true        # Strips all debug symbols (PDB info)